[gd_scene load_steps=14 format=2]

[ext_resource path="res://entities/pictures/player/arm.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://entities/pictures/player/legs.png" type="Texture" id=3]
[ext_resource path="res://entities/pictures/player/shoulder.png" type="Texture" id=4]
[ext_resource path="res://entities/pictures/player/foot.png" type="Texture" id=5]
[ext_resource path="res://entities/pictures/player/chest.png" type="Texture" id=6]
[ext_resource path="res://entities/pictures/player/head.png" type="Texture" id=7]
[ext_resource path="res://default.tres" type="DynamicFont" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 15.2081 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 0.953125 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 15.2081 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Foot2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Foot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/Foot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -4, 12 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Visual/Foot2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 4, 12 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Foot2:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -19.5, 0.0, 16.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Foot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 14.4, 0.0, -20.0 ]
}

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )
speed = 200
jumpSpeed = 250
gravity = 35

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.7975 )
scale = Vector2( 1, 0.973 )
shape = SubResource( 1 )

[node name="FloorDetect" type="Area2D" parent="."]
position = Vector2( -3, 0 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="FloorDetect"]
modulate = Color( 0, 1, 0.0862745, 1 )
position = Vector2( 3, 16.558 )
shape = SubResource( 2 )

[node name="EnemyDetect" type="Area2D" parent="."]
position = Vector2( -3, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetect"]
modulate = Color( 1, 0, 1, 1 )
position = Vector2( 3, 0.7975 )
scale = Vector2( 1, 0.973 )
shape = SubResource( 3 )

[node name="Visual" type="Node2D" parent="."]
modulate = Color( 0.384314, 0.384314, 0.384314, 1 )

[node name="Arm" type="Sprite" parent="Visual"]
position = Vector2( -10, 4.0161 )
scale = Vector2( 2, 1.9839 )
texture = ExtResource( 1 )

[node name="Arm2" type="Sprite" parent="Visual"]
position = Vector2( 10, 4 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Chest" type="Sprite" parent="Visual"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="Foot" type="Sprite" parent="Visual"]
position = Vector2( -4, 12 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
offset = Vector2( 1.127, 1.536 )

[node name="Foot2" type="Sprite" parent="Visual"]
position = Vector2( 4, 12 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
offset = Vector2( 0.826, 1.56 )

[node name="Head" type="Sprite" parent="Visual"]
position = Vector2( 0, -10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Legs" type="Sprite" parent="Visual"]
position = Vector2( 0, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="Shoulder" type="Sprite" parent="Visual"]
position = Vector2( -8, -2 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Shoulder2" type="Sprite" parent="Visual"]
position = Vector2( 8, -2 )
rotation = 3.14159
scale = Vector2( 2, -2 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]
playback_speed = 1.5
playback/speed = 1.5

[node name="tick_rate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="Username" type="Label" parent="."]
margin_left = -183.0
margin_top = -29.0
margin_right = 1287.0
margin_bottom = 31.0
rect_scale = Vector2( 0.25, 0.25 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Unnamed"
align = 1

[connection signal="body_entered" from="FloorDetect" to="." method="_on_FloorDetect_body_entered"]
[connection signal="body_exited" from="FloorDetect" to="." method="_on_FloorDetect_body_exited"]
[connection signal="body_entered" from="EnemyDetect" to="." method="_on_EnemyDetect_body_entered"]
[connection signal="timeout" from="tick_rate" to="." method="_on_tick_rate_timeout"]
